# ns

./: .clang-format  .clang-tidy  .clangd  .editorconfig  CMakeLists.txt  CMakePresets.json  Makefile  README.md
cmake/: build_generator.cmake  debug.cmake  findpackage.cmake  nsConfig.cmake.in  pkgconfig.cmake  testing.cmake
doc/: BUILD.md
pkgconfig/: ns.pc.in
src/ns/: CMakeLists.txt  core.hpp  linalg.hpp  ns.hpp  solvers.hpp
src/ns/core/: CMakeLists.txt  complex.hpp  concepts.hpp  constants.hpp  type_aliases.hpp
src/ns/linalg/: CMakeLists.txt  mat.hpp  vec.hpp  vec_expr.hpp
src/ns/solvers/: CMakeLists.txt  README.md  cg.hpp
tests/: .clang-tidy  CMakeLists.txt
tests/linalg/: CMakeLists.txt  test_vec.cpp
